--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
     border: 2px solid #000;
     border-radius: 10px;
     box-sizing: border-box;
+    touch-action: manipulation; /* eliminates 300ms delays */
   }
 
   .overlay {
@@ -68,6 +69,7 @@
     border-radius: 10px;
     border: 0;
     background: #111; color: #fff; font-weight: 800;
+    touch-action: manipulation;  /* more responsive on iOS/Firefox */
   }
   input.initials {
     text-transform: uppercase; font-size: 18px; width: 70px; text-align: center;
@@ -380,6 +382,16 @@ restartBtn.addEventListener('click', (e)=>{ e.preventDefault(); startGame(); });
 // Instant tap on iOS/Firefox iOS
 startBtn.addEventListener('touchstart', (e)=>{ e.preventDefault(); startGame(); }, {passive:false});
 restartBtn.addEventListener('touchstart', (e)=>{ e.preventDefault(); startGame(); }, {passive:false});
+
+// Failsafe: start on the FIRST interaction anywhere (covers odd browsers)
+function globalStarter(e){
+  if (!running){
+    e && e.preventDefault && e.preventDefault();
+    startGame();
+  }
+}
+document.addEventListener('pointerdown', globalStarter, { once:true, passive:false });
+document.addEventListener('touchstart', globalStarter, { once:true, passive:false });
 
 document.addEventListener('keydown', (e)=>{
   if (e.code === 'Space'){
