--- a/index.html
+++ b/index.html
@@ -17,13 +17,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-
-    /* keep content above iOS bottom bar */
-    padding-bottom: constant(safe-area-inset-bottom);
     padding-bottom: env(safe-area-inset-bottom);
   }
 
-  /* Top 10 bar */
   #leaderboard {
     width: 100%;
     max-width: 560px;
@@ -36,21 +32,19 @@
   #leaderboard ol { margin: 0 auto 4px; padding-left: 24px; max-width: 520px; }
   #leaderboard li { line-height: 1.35; }
 
-  /* Canvas wrapper */
   #wrap { position: relative; width: 100%; max-width: 560px; }
 
   canvas{
-    background: #0e5580;       /* sky */
+    background: #0e5580;
     display: block;
     width: 100%;
-    /* stable mobile height: viewport minus top bar (~140px) minus safe-area bottom */
     height: calc(var(--app-vh, 100vh) - 140px - env(safe-area-inset-bottom));
     min-height: 360px;
     max-height: calc(100vh - env(safe-area-inset-bottom));
     border: 2px solid #000;
     border-radius: 10px;
     box-sizing: border-box;
-    touch-action: manipulation; /* eliminates 300ms delays */
+    touch-action: manipulation;
   }
 
   .overlay {
@@ -69,7 +63,7 @@
     border-radius: 10px;
     border: 0;
     background: #111; color: #fff; font-weight: 800;
-    touch-action: manipulation;  /* more responsive on iOS/Firefox */
+    touch-action: manipulation;
   }
   input.initials {
     text-transform: uppercase; font-size: 18px; width: 70px; text-align: center;
@@ -90,7 +84,8 @@
     <div id="startScreen" class="overlay">
       <h1 style="margin:0 0 6px">Blue Vespa</h1>
       <div>Tap or press <b>Space</b> to jump (double‑jump allowed)</div>
-      <button id="startButton">Start</button>
+      <!-- inline onclick is a reliable fallback on iOS/Firefox -->
+      <button id="startButton" type="button" onclick="window.__start&&window.__start()">Start</button>
     </div>
 
     <div id="gameOverScreen" class="overlay" style="display:none;">
@@ -98,10 +93,10 @@
       <p id="finalScore" style="margin:0 0 8px"></p>
       <div style="display:flex; gap:8px; justify-content:center; align-items:center; flex-wrap:wrap;">
         <input id="playerInitials" class="initials" maxlength="3" placeholder="AAA" autocomplete="off" spellcheck="false" />
-        <button id="saveScoreButton">Save</button>
-        <button id="skipButton" style="background:#666">Skip</button>
+        <button id="saveScoreButton" type="button">Save</button>
+        <button id="skipButton" type="button" style="background:#666">Skip</button>
       </div>
-      <button id="restartButton" style="margin-top:14px;">Restart</button>
+      <button id="restartButton" type="button">Restart</button>
     </div>
   </div>
 
@@ -122,28 +117,19 @@ const canvas = document.getElementById('gameCanvas');
 const ctx = canvas.getContext('2d');
 
 let W = 480, H = 300;
-let floorY = H - 6;   // ground baseline (pixels from top)
+let floorY = H - 6;
 
 function fitCanvasDPR(){
   const rect = canvas.getBoundingClientRect();
   const DPR = Math.max(1, window.devicePixelRatio || 1);
-
   canvas.width  = Math.max(1, Math.round(rect.width  * DPR));
   canvas.height = Math.max(1, Math.round(rect.height * DPR));
-
-  // 1 unit == 1 CSS pixel
   ctx.setTransform(DPR,0,0,DPR,0,0);
-
   W = Math.max(1, Math.round(rect.width));
   H = Math.max(1, Math.round(rect.height));
   floorY = H - 6;
-
-  // keep player on-screen if height changed
   if (player.y > floorY - player.h) {
-    player.y = floorY - player.h;
-    player.dy = 0;
-    player.onGround = true;
-    player.jumps = 0;
+    player.y = floorY - player.h; player.dy = 0; player.onGround = true; player.jumps = 0;
   }
 }
 fitCanvasDPR();
@@ -152,7 +138,7 @@ if (window.visualViewport) window.visualViewport.addEventListener('resize', fitC
 
 /* ---------------- Assets ---------------- */
 const vespaImg = new Image();
-vespaImg.src = 'Blue Vespa Right.png';  // place this PNG next to index.html
+vespaImg.src = 'Blue Vespa Right.png';  // keep this PNG next to index.html
 
 /* ---------------- Game state ---------------- */
 let running = false;
@@ -165,7 +151,7 @@ const SPEED_BASE = 4;
 const SPEED_MAX  = 15; // your max
 let speed = SPEED_BASE;
 
-// World knobs (favor singles, gradual ramp)
+// World knobs
 const world = {
   pTallBase: 0.14,
   pTallLate: 0.34,
@@ -173,19 +159,16 @@ const world = {
   singleStreak: 0,
   maxTallStreak: 1,
   maxSingleStreak: 4,
-
   warmupScore: 150,
   rampRate:   0.0025,
-
-  // reaction-time targets for fair spacing
   rtSingle: 0.90,
   rtTall:   1.05,
   rtJitter: 0.10
 };
 
 // Distance-based spawning
-let distSinceSpawn = 0; // pixels traveled since last spawn
-let nextGapPx = 520;   // distance until next obstacle
+let distSinceSpawn = 0;
+let nextGapPx = 520;
 
 /* ---------------- Physics ---------------- */
 const GRAVITY = 0.5;
@@ -193,40 +176,26 @@ const JUMP_VEL = 9;
 
 /* ---------------- Obstacle helpers ---------------- */
 function decideTall(scoreNow){
-  // blend toward late-game chance
   const lateBlend = Math.min(1, Math.max(0, (scoreNow - world.warmupScore) / 1500));
   let pTall = world.pTallBase * (1 - lateBlend) + world.pTallLate * lateBlend;
-
-  // early bias toward singles
   if (scoreNow < 800) pTall *= 0.55;
-
-  // soft cooldown after a tall
   if (world.tallStreak > 0) pTall *= 0.5;
-
-  // anti-streak hard caps
   if (world.tallStreak   >= world.maxTallStreak)   return false;
   if (world.singleStreak >= world.maxSingleStreak) return true;
-
   return Math.random() < pTall;
 }
-
 function triangleSpec(isTall){
-  // single vs tall heights; tall ramps with score so early is friendlier
   const ramp = Math.min(1, Math.max(0, score / 1200));
   const smallMin = 28, smallMax = 42;
-
   const tallMin0=42, tallMax0=60, tallMin1=50, tallMax1=74;
   const tallMin = tallMin0 + (tallMin1 - tallMin0) * ramp;
   const tallMax = tallMax0 + (tallMax1 - tallMax0) * ramp;
-
   const h = isTall
     ? tallMin + Math.random()*(tallMax - tallMin)
     : smallMin + Math.random()*(smallMax - smallMin);
-
-  const base = h * 0.9 + Math.random()*8; // slight variety
+  const base = h * 0.9 + Math.random()*8;
   return { base, height: h };
 }
-
 function planNextGapPx(currentSpeed, nextIsTall){
   const pxPerSec = Math.max(1, currentSpeed * 60);
   const rtBase = nextIsTall ? world.rtTall : world.rtSingle;
@@ -235,23 +204,11 @@ function planNextGapPx(currentSpeed, nextIsTall){
   const margin = 90 + currentSpeed*6 + (nextIsTall ? 40 : 0);
   return Math.max(240, Math.round(pxPerSec * rt + margin));
 }
-
 function spawnObstacle(isTall){
   const spec = triangleSpec(isTall);
   const colorTall = '#ef476f', colorSmall = '#06d6a0';
-  obstacles.push({
-    x: W + 20,
-    y: floorY,                 // base line
-    base: spec.base,
-    height: spec.height,
-    color: isTall ? colorTall : colorSmall,
-    tall: isTall
-  });
-
-  if (isTall){ world.tallStreak++; world.singleStreak = 0; }
-  else       { world.singleStreak++; world.tallStreak  = 0; }
-
-  // Plan next gap using current speed; "peek" for next type
+  obstacles.push({ x: W + 20, y: floorY, base: spec.base, height: spec.height, color: isTall ? colorTall : colorSmall, tall: isTall });
+  if (isTall){ world.tallStreak++; world.singleStreak = 0; } else { world.singleStreak++; world.tallStreak = 0; }
   const guessNextTall = decideTall(score);
   nextGapPx = planNextGapPx(speed, guessNextTall);
   distSinceSpawn = 0;
@@ -264,17 +221,13 @@ function resetGame(){
   obstacles.length = 0;
   world.tallStreak = 0;
   world.singleStreak = 0;
-
-  // fast first spawn to avoid empty screen
   nextGapPx = 320;
   distSinceSpawn = nextGapPx - 60;
-
   player.y = floorY - player.h;
   player.dy = 0;
   player.onGround = true;
   player.jumps = 0;
 }
-
 function startGame(){
   document.getElementById('startScreen').style.display = 'none';
   document.getElementById('gameOverScreen').style.display = 'none';
@@ -282,130 +235,78 @@ function startGame(){
   running = true;
   requestAnimationFrame(frame);
 }
-
 function endGame(){
   running = false;
   document.getElementById('finalScore').textContent = `Score: ${score}`;
   document.getElementById('gameOverScreen').style.display = 'flex';
 }
-
 function frame(){
   if (!running) return;
-
-  // clear
   ctx.clearRect(0,0,canvas.width,canvas.height);
-
-  // speed ramp (long‑lived)
   speed = Math.min(SPEED_MAX, SPEED_BASE + world.rampRate * score);
 
-  /* --- player physics --- */
+  // physics
   player.y += player.dy;
   player.dy += GRAVITY;
-  if (player.y >= floorY - player.h){
-    player.y = floorY - player.h;
-    player.dy = 0;
-    if (!player.onGround){ player.onGround = true; player.jumps = 0; }
-  } else {
-    player.onGround = false;
-  }
+  if (player.y >= floorY - player.h){ player.y = floorY - player.h; player.dy = 0; if (!player.onGround){ player.onGround = true; player.jumps = 0; } }
+  else player.onGround = false;
 
-  /* --- ground --- */
-  ctx.fillStyle = '#2a2a2a';
-  ctx.fillRect(0, floorY, W, 2);
+  // ground
+  ctx.fillStyle = '#2a2a2a'; ctx.fillRect(0, floorY, W, 2);
 
-  /* --- player draw --- */
-  if (vespaImg.complete && vespaImg.naturalWidth){
-    ctx.drawImage(vespaImg, player.x, player.y, player.w, player.h);
-  } else {
-    ctx.fillStyle = '#1e8bff';
-    ctx.fillRect(player.x, player.y, player.w, player.h);
-  }
+  // player
+  if (vespaImg.complete && vespaImg.naturalWidth) ctx.drawImage(vespaImg, player.x, player.y, player.w, player.h);
+  else { ctx.fillStyle = '#1e8bff'; ctx.fillRect(player.x, player.y, player.w, player.h); }
 
-  /* --- obstacles --- */
+  // obstacles
   for (let i=obstacles.length-1; i>=0; i--){
-    const o = obstacles[i];
-    o.x -= speed;
-
-    // triangle
+    const o = obstacles[i]; o.x -= speed;
     ctx.fillStyle = o.color;
     ctx.beginPath();
     ctx.moveTo(o.x, o.y);
     ctx.lineTo(o.x + o.base/2, o.y - o.height);
     ctx.lineTo(o.x + o.base, o.y);
-    ctx.closePath();
-    ctx.fill();
-
-    // AABB vs triangle bbox (simple + fair)
+    ctx.closePath(); ctx.fill();
     const bbox = { x:o.x, y:o.y - o.height, w:o.base, h:o.height };
-    if (player.x < bbox.x + bbox.w &&
-        player.x + player.w > bbox.x &&
-        player.y < bbox.y + bbox.h &&
-        player.y + player.h > bbox.y){
-      endGame();
-    }
-
-    if (o.x + o.base < 0){
-      obstacles.splice(i,1);
-      score++;
-    }
+    if (player.x < bbox.x + bbox.w && player.x + player.w > bbox.x && player.y < bbox.y + bbox.h && player.y + player.h > bbox.y) endGame();
+    if (o.x + o.base < 0){ obstacles.splice(i,1); score++; }
   }
 
-  /* --- distance-based spawn --- */
+  // spawn
   distSinceSpawn += speed;
-  if (distSinceSpawn >= nextGapPx){
-    const tall = decideTall(score);
-    spawnObstacle(tall);
-  }
+  if (distSinceSpawn >= nextGapPx){ spawnObstacle(decideTall(score)); }
 
-  /* --- HUD --- */
-  ctx.fillStyle = '#fff';
-  ctx.font = '16px system-ui, sans-serif';
-  ctx.fillText(`Score: ${score}`, 10, 24);
+  // HUD
+  ctx.fillStyle = '#fff'; ctx.font = '16px system-ui, sans-serif'; ctx.fillText(`Score: ${score}`, 10, 24);
 
   requestAnimationFrame(frame);
 }
 
 /* ---------------- Controls ---------------- */
-function jump(){
-  if (player.jumps < 2){
-    player.dy = -JUMP_VEL;
-    player.jumps++;
-    player.onGround = false;
-  }
-}
+function jump(){ if (player.jumps < 2){ player.dy = -JUMP_VEL; player.jumps++; player.onGround = false; } }
+
 const startBtn = document.getElementById('startButton');
 const restartBtn = document.getElementById('restartButton');
+const startOverlay = document.getElementById('startScreen');
 
-startBtn.addEventListener('click', (e)=>{ e.preventDefault(); startGame(); });
-restartBtn.addEventListener('click', (e)=>{ e.preventDefault(); startGame(); });
+startBtn.addEventListener('click', ()=> startGame());
+restartBtn.addEventListener('click', ()=> startGame());
 
-// Instant tap on iOS/Firefox iOS
-startBtn.addEventListener('touchstart', (e)=>{ e.preventDefault(); startGame(); }, {passive:false});
-restartBtn.addEventListener('touchstart', (e)=>{ e.preventDefault(); startGame(); }, {passive:false});
+// extra direct taps (iOS/Firefox)
+startBtn.addEventListener('touchend', (e)=>{ e.preventDefault(); startGame(); }, {passive:false});
+restartBtn.addEventListener('touchend', (e)=>{ e.preventDefault(); startGame(); }, {passive:false});
+startOverlay.addEventListener('touchend', (e)=>{ e.preventDefault(); startGame(); }, {passive:false});
 
-// Failsafe: start on the FIRST interaction anywhere (covers odd browsers)
-function globalStarter(e){
-  if (!running){
-    e && e.preventDefault && e.preventDefault();
-    startGame();
-  }
-}
-document.addEventListener('pointerdown', globalStarter, { once:true, passive:false });
-document.addEventListener('touchstart', globalStarter, { once:true, passive:false });
+// failsafe: start on first interaction anywhere
+function globalStarter(){ if (!running) startGame(); }
+document.addEventListener('click', globalStarter, { once:true });
+document.addEventListener('touchend', globalStarter, { once:true, passive:true });
 
 document.addEventListener('keydown', (e)=>{
-  if (e.code === 'Space'){
-    e.preventDefault();
-    if (!running) startGame(); else jump();
-  } else if (e.code === 'KeyR'){
-    e.preventDefault();
-    startGame();
-  }
+  if (e.code === 'Space'){ e.preventDefault(); if (!running) startGame(); else jump(); }
+  else if (e.code === 'KeyR'){ e.preventDefault(); startGame(); }
 });
-canvas.addEventListener('touchstart', (e)=>{
-  e.preventDefault();
-  if (!running) startGame(); else jump();
-}, {passive:false});
+canvas.addEventListener('touchstart', (e)=>{ e.preventDefault(); if (!running) startGame(); else jump(); }, {passive:false});
 
 /* ---------------- Leaderboard ---------------- */
 const API = 'https://scooter-game-api.vercel.app';
@@ -435,9 +336,11 @@ function saveScore(){
     body: JSON.stringify({ name: initials, score })
   }).then(()=>loadLeaderboard());
 }
-
 document.getElementById('saveScoreButton').addEventListener('click', saveScore);
 document.getElementById('skipButton').addEventListener('click', ()=>{ document.getElementById('gameOverScreen').style.display='none'; });
+
+/* Expose a bulletproof starter for inline onclick fallback */
+window.__start = startGame;
 
 loadLeaderboard();
 </script>
